# h743_freertos_lvgl_template

./: .clang-format  .mxproject  CMakeLists.txt  README.md  STM32H743IIT6.ioc  STM32H743XX_FLASH.ld
Core/: CMakeLists.txt
Core/Inc/: fmc.h  ltdc.h
Core/Src/: fmc.c  ltdc.c  main.c
Drivers/: CMakeLists.txt
Drivers/User_Drivers/Inc/: lcd_rgb.h
Drivers/User_Drivers/Src/: lcd_pwm.c  lcd_rgb.c  led.c  sdram.c  touch_800x480.c  touch_iic.c  usart.c
Middlewares/lvgl-8.3.10/: CMakeLists.txt  lv_conf.h
Middlewares/lvgl-8.3.10/demos/music/: lv_demo_music_list.c
Middlewares/lvgl-8.3.10/demos/music/assets/: img_lv_demo_music_btn_corner_large.c  img_lv_demo_music_btn_list_pause.c  img_lv_demo_music_btn_list_pause_large.c  img_lv_demo_music_btn_list_play.c  img_lv_demo_music_btn_list_play_large.c  img_lv_demo_music_btn_loop.c  img_lv_demo_music_btn_loop_large.c  img_lv_demo_music_btn_next.c  img_lv_demo_music_btn_next_large.c  img_lv_demo_music_btn_pause.c  img_lv_demo_music_btn_pause_large.c  img_lv_demo_music_btn_play.c  img_lv_demo_music_btn_play_large.c  img_lv_demo_music_btn_prev_large.c
Middlewares/lvgl-8.3.10/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
User_Drivers/: CMakeLists.txt
User_Drivers/Inc/: lcd_fonts.h  lcd_image.h  lcd_pwm.h
User_Drivers/Src/: lcd_fonts.c  lcd_pwm.c
app/: CMakeLists.txt
app/music/: lv_demo_music.h  lv_demo_music_main.c
app/music/assets/: img_lv_demo_music_btn_loop.c  img_lv_demo_music_btn_prev.c  img_lv_demo_music_btn_rnd.c  img_lv_demo_music_btn_rnd_large.c  img_lv_demo_music_corner_left.c  img_lv_demo_music_corner_left_large.c  img_lv_demo_music_corner_right.c  img_lv_demo_music_corner_right_large.c  img_lv_demo_music_cover_1.c  img_lv_demo_music_cover_2.c  img_lv_demo_music_cover_3.c  img_lv_demo_music_icon_1.c  img_lv_demo_music_icon_1_large.c  img_lv_demo_music_icon_2.c  img_lv_demo_music_icon_2_large.c  img_lv_demo_music_icon_3.c  img_lv_demo_music_icon_3_large.c  img_lv_demo_music_icon_4.c  img_lv_demo_music_icon_4_large.c  img_lv_demo_music_list_border.c  img_lv_demo_music_list_border_large.c  img_lv_demo_music_logo.c  img_lv_demo_music_slider_knob.c  img_lv_demo_music_slider_knob_large.c  img_lv_demo_music_wave_bottom.c  img_lv_demo_music_wave_bottom_large.c  img_lv_demo_music_wave_top.c  img_lv_demo_music_wave_top_large.c
cmake/stm32cubemx/: CMakeLists.txt
